fix: overflow-x

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -118,6 +118,12 @@
   * {
     @apply border-border outline-ring/50;
   }
+
+  html,
+  body {
+    overflow-x: hidden;
+  }
+
   body {
     @apply bg-background text-foreground;
   }
